--- a/src/main/resources/templates/transferRequest.html
+++ b/src/main/resources/templates/transferRequest.html
@@ -8,7 +8,7 @@
 <!-- Bootstrap Styles-->
 <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
 <!-- FontAwesome Styles-->
-<link th:href="@{/css/font-awesome.css}" rel="stylesheet" />
+<link th:href="@{/css/font-awesome.min.css}" rel="stylesheet" />
 <!-- Custom Styles-->
 <link th:href="@{/css/admin-styles.css}" rel="stylesheet" />
 <!-- Google Fonts-->
