--- a/src/main/resources/templates/updatePickupPointDetails.html
+++ b/src/main/resources/templates/updatePickupPointDetails.html
@@ -7,7 +7,7 @@
 <!-- Bootstrap Styles-->
 <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
 <!-- FontAwesome Styles-->
-<link th:href="@{/css/font-awesome.css}" rel="stylesheet" />
+<link th:href="@{/css/font-awesome.min.css}" rel="stylesheet" />
 <!-- Morris Chart Styles-->
 <link th:href="@{/js/morris/morris-0.4.3.min.css}" rel="stylesheet" />
 <link rel="stylesheet" th:href="@{http://www.w3schools.com/lib/w3.css}" />
