Added feature for uploading verification document.

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -63,7 +63,8 @@
 
 	<!-- form start -->
 	<form action="#" th:action="@{/payment}" th:object="${userData}"
-		method="post" onsubmit="return emailFunction(this);">
+		enctype="multipart/form-data" method="post"
+		onsubmit="return emailFunction(this);">
 		<div class="register">
 
 			<div class="text-danger" th:text="${failure}"></div>
