--- a/src/main/resources/templates/addNewUser.html
+++ b/src/main/resources/templates/addNewUser.html
@@ -41,6 +41,7 @@
 								<div class="col-md-12 col-sm-12 col-xs-12">
 									<form action="#" th:action="@{/manager/managerPayment}"
 										th:object="${userData}" method="post"
+										enctype="multipart/form-data"
 										onsubmit="return emailFunction(this)">
 										<div class="row">
 											<div class="col-md-6">
@@ -176,7 +177,7 @@
 	<!-- Custom Js -->
 	<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
 	<script src="/js/custom.js" th:src="@{/js/custom.js}"></script>
-		<script src="/js/jquery.datetimepicker.full.js"
+	<script src="/js/jquery.datetimepicker.full.js"
 		th:src="@{/js/jquery.datetimepicker.full.js}"></script>
 	<script>
 		$('#datepicker').datetimepicker({
