Added feature to handle the enable and disable the user from admin and manager view.

--- a/src/main/resources/templates/userBookingHistory.html
+++ b/src/main/resources/templates/userBookingHistory.html
@@ -145,15 +145,15 @@
 											id="dataTables-example">
 											<thead>
 												<tr class="tblFontSize">
-													<th>Booking Id</th>
-													<th>Booking Time</th>
-													<th>Expected In Time</th>
-													<th>Expected Out Time</th>
-													<th>Actual In Time</th>
-													<th>Actual Out Time</th>
-													<th>Picked Up From</th>
-													<th>Returned At</th>
-													<th>Fare</th>
+													<th class="text-center">Booking Id</th>
+													<th class="text-center">Booking Time</th>
+													<th class="text-center">Expected In Time</th>
+													<th class="text-center">Expected Out Time</th>
+													<th class="text-center">Actual In Time</th>
+													<th class="text-center">Actual Out Time</th>
+													<th class="text-center">Picked Up From</th>
+													<th class="text-center">Returned At</th>
+													<th class="text-center">Fare</th>
 												</tr>
 											</thead>
 											<tbody class="tblFontSize">
