--- a/src/main/resources/templates/walletTransaction.html
+++ b/src/main/resources/templates/walletTransaction.html
@@ -171,12 +171,12 @@
 												id="dataTables-example">
 												<thead>
 													<tr class="tblFontSize">
-														<th>Transaction Id</th>
-														<th>Wallet Id</th>
-														<th>Transaction Amount</th>
-														<th>Transaction Time</th>
-														<th>Transaction Type</th>
-														<th>Payment Mode</th>
+														<th class="text-center">Transaction Id</th>
+														<th class="text-center">Wallet Id</th>
+														<th class="text-center">Transaction Amount</th>
+														<th class="text-center">Transaction Time</th>
+														<th class="text-center">Transaction Type</th>
+														<th class="text-center">Payment Mode</th>
 													</tr>
 												</thead>
 												<tbody class="tblFontSize">
