--- a/src/main/resources/templates/searchUsers.html
+++ b/src/main/resources/templates/searchUsers.html
@@ -27,11 +27,13 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h1 class="page-header">
-						User Details<br /> <small sec:authorize="hasAuthority('ADMIN')">(Click on User's Name to view
-							user profile or click on User's role to change role)</small>
+						User Details<br /> <small sec:authorize="hasAuthority('ADMIN')">(Click
+							on User's Name to view user profile or click on User's role to
+							change role)</small>
 					</h1>
 					<h2>
-						<small  sec:authorize="hasAuthority('ADMIN')">(You cannot change your own role.)</small>
+						<small sec:authorize="hasAuthority('ADMIN')">(You cannot
+							change your own role.)</small>
 					</h2>
 				</div>
 			</div>
@@ -76,10 +78,19 @@
 												th:text="${user.role.userRole}"></a></td>
 											<td sec:authorize="hasAuthority('MANAGER')"
 												class="text-center" th:text="${user.role.userRole}"></td>
-											<td class="text-center" th:if="${user.isApproved}">✔</td>
-											<td class="text-center" th:unless="${user.isApproved}">✘ <a th:href="@{/user/userApproval/} + ${user.userId}" th:text="Approve"></a></td>
-											<td class="text-center" th:if="${user.enabled}">✔</td>
-											<td class="text-center" th:unless="${user.enabled}">✘</td>
+											<td class="text-center" th:if="${user.isApproved}">✔<span
+												style="font-size: 10px; color: blue;"><a
+													th:href="@{/user/userApproval/} + ${user.userId}">Disable</a></span></td>
+											<td class="text-center" th:unless="${user.isApproved}">✘
+												<span style="font-size: 10px; color: blue;"><a
+													th:href="@{/user/userApproval/} + ${user.userId}">Approve</a></span>
+											</td>
+											<td class="text-center" th:if="${user.enabled}">✔ <span
+												style="font-size: 10px; color: blue;"><a
+													th:href="@{/user/userEnable/} + ${user.userId}">Disable</a></span></td>
+											<td class="text-center" th:unless="${user.enabled}">✘ <span
+												style="font-size: 10px; color: blue;"><a
+													th:href="@{/user/userEnable/} + ${user.userId}">Enable</a></span></td>
 										</tr>
 									</tbody>
 								</table>
