Added templates for other mails and changed their listeners

--- a/src/main/resources/templates/mail/resendVerificationMail.html
+++ b/src/main/resources/templates/mail/resendVerificationMail.html
@@ -12,15 +12,22 @@
             Wow! You've got a long name (more than 10 chars)! <br />
         </p>
         <p>
-            You have been successfully registered to the <b>Cycle Rental System</b> on
+            Your request for new verification mail have been successfully processed by the <b>Cycle Rental System</b> on
             <span th:text="${#dates.format(subscriptionDate)}">28-12-2012</span>
         </p>
         <p>
         	To confirm your registration <a th:href="${confirmationUrl}">Click Here</a>
         </p>
         <p>
+        	<b>N.B.: </b> This verification link is only active for 24 hours.
+        </p>
+        <p>
             Regards, <br />
             &emsp; <em>The Cycle Rental Team</em>
+        </p>
+        <br />
+        <p>
+        	<b>P.S.:</b> This is a system generated email. Please <b>do not reply</b> to this mail.
         </p>
     </body>
 </html>
