--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -102,14 +102,20 @@
 										<tbody>
 											<tr class="odd" th:each="booking : ${bookings}">
 												<td class="center"><span th:text="${booking.bookingId}"></span></td>
-												<td class="center"><span th:text="${booking.user.userId}"></span></td>
-												<td class="center"><span th:text="${booking.user.firstName}"></span></td>
-												<td class="center"><span th:text="${booking.bookingTime}"></span></td>
-												<td class="center"><span th:text="${booking.pickedUpFrom.location}"></span></td>
-												<td class="center"><span th:text="${booking.returnedAt.location}"></span></td>
+												<td class="center"><span
+													th:text="${booking.user.userId}"></span></td>
+												<td class="center"><span
+													th:text="${booking.user.firstName}"></span></td>
+												<td class="center"><span
+													th:text="${booking.bookingTime}"></span></td>
+												<td class="center"><span
+													th:text="${booking.pickedUpFrom.location}"></span></td>
+												<td class="center"><span
+													th:text="${booking.returnedAt.location}"></span></td>
 												<td class="center"><span th:text="${booking.actualOut}"></span></td>
 												<td class="center"><span th:text="${booking.actualIn}"></span></td>
-												<td class="center"><span th:text="${booking.biCycleId.chasisNo}"></span></td>
+												<td class="center"><span
+													th:text="${booking.biCycleId.chasisNo}"></span></td>
 											</tr>
 										</tbody>
 									</table>
@@ -124,40 +130,7 @@
 				<!-- /. ROW  -->
 
 				<div class="row">
-					<div class="col-md-4 col-sm-12 col-xs-12">
-						<div class="panel panel-default">
-							<div class="panel-heading">Requests Panel</div>
-							<div class="panel-body">
-								<div class="list-group">
-
-									<a href="#" class="list-group-item"> <span class="badge">7
-											minutes ago</span> <i class="fa fa-fw fa-comment"></i> Requested for
-										bicycles
-									</a> <a href="#" class="list-group-item"> <span class="badge">16
-											minutes ago</span> <i class="fa fa-fw fa-truck"></i> Order 392
-										shipped
-									</a> <a href="#" class="list-group-item"> <span class="badge">36
-											minutes ago</span> <i class="fa fa-fw fa-globe"></i> Invoice 653 has
-										paid
-									</a> <a href="#" class="list-group-item"> <span class="badge">1
-											hour ago</span> <i class="fa fa-fw fa-user"></i> A new manager has
-										been added
-									</a> <a href="#" class="list-group-item"> <span class="badge">1.23
-											hour ago</span> <i class="fa fa-fw fa-user"></i> A pickup point blew
-										up
-									</a> <a href="#" class="list-group-item"> <span class="badge">yesterday</span>
-										<i class="fa fa-fw fa-globe"></i> Saved the world
-									</a>
-								</div>
-								<div class="text-right">
-									<a href="#">More requests <i
-										class="fa fa-arrow-circle-right"></i></a>
-								</div>
-							</div>
-						</div>
-
-					</div>
-					<div class="col-md-8 col-sm-12 col-xs-12">
+					<div class="col-md-12 col-sm-12 col-xs-12">
 
 						<div class="panel panel-default">
 							<div class="panel-heading">Pickup point managers</div>
@@ -175,10 +148,14 @@
 										</thead>
 										<tbody>
 											<tr th:each="pickUpPointManagers : ${pickUpPointManagers}">
-												<td><span th:text="${pickUpPointManagers.pickUpPoint.pickUpPointId}"></span></td>
-												<td><span th:text="${pickUpPointManagers.pickUpPoint.location}"></span></td>
-												<td><span th:text="${pickUpPointManagers.user.firstName}"></span></td>
-											    <td><span th:text="${pickUpPointManagers.user.lastName}"></span></td>
+												<td><span
+													th:text="${pickUpPointManagers.pickUpPoint.pickUpPointId}"></span></td>
+												<td><span
+													th:text="${pickUpPointManagers.pickUpPoint.location}"></span></td>
+												<td><span
+													th:text="${pickUpPointManagers.user.firstName}"></span></td>
+												<td><span
+													th:text="${pickUpPointManagers.user.lastName}"></span></td>
 												<td><span th:text="${pickUpPointManagers.user.email}"></span></td>
 											</tr>
 										</tbody>
