Added feature to open and close pickup point based on manager login and logout.

--- a/src/main/resources/templates/receiveConfirm.html
+++ b/src/main/resources/templates/receiveConfirm.html
@@ -44,7 +44,7 @@
 										vehicle no. is: <b><span th:text="${transfer.vehicleNo}"></span></b>
 									</p>
 									<div class="row">
-										<div class="col-sm-2" th:each="bicycle : ${session.bicycles}">
+										<div class="col-sm-2" th:each="bicycle : ${session.biCycles}">
 											<h4>
 												<span class="label label-info" th:text="${bicycle.chasisNo}"></span>
 											</h4>
