--- a/src/main/resources/templates/transferConfirm.html
+++ b/src/main/resources/templates/transferConfirm.html
@@ -42,7 +42,7 @@
 										to <strong><span
 											th:text="${transfer.transferredTo.location}"></span></strong>.
 									</p>
-									<div class="col-sm-2" th:each="bicycle : ${session.bicycles}">
+									<div class="col-sm-2" th:each="bicycle : ${session.biCycles}">
 										<h4>
 											<span class="label label-info" th:text="${bicycle.chasisNo}"></span>
 										</h4>
