--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -144,19 +144,25 @@
 												<th>First Name</th>
 												<th>Last Name</th>
 												<th>Email ID.</th>
+												<th>IsOpen</th>
 											</tr>
 										</thead>
 										<tbody>
 											<tr th:each="pickUpPointManagers : ${pickUpPointManagers}">
-												<td><span
+												<td class="text-center"><span
 													th:text="${pickUpPointManagers.pickUpPoint.pickUpPointId}"></span></td>
-												<td><span
+												<td class="text-center"><span
 													th:text="${pickUpPointManagers.pickUpPoint.location}"></span></td>
-												<td><span
+												<td class="text-center"><span
 													th:text="${pickUpPointManagers.user.firstName}"></span></td>
-												<td><span
+												<td class="text-center"><span
 													th:text="${pickUpPointManagers.user.lastName}"></span></td>
-												<td><span th:text="${pickUpPointManagers.user.email}"></span></td>
+												<td class="text-center"><span
+													th:text="${pickUpPointManagers.user.email}"></span></td>
+												<td class="text-center"
+													th:if="${pickUpPointManagers.pickUpPoint.isOpen}">✔</td>
+												<td class="text-center"
+													th:unless="${pickUpPointManagers.pickUpPoint.isOpen}">✘</td>
 											</tr>
 										</tbody>
 									</table>
