--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -34,10 +34,13 @@
 						<li><a
 							th:href="@{/user/userProfile/} + ${#authentication.principal.userId}"><i
 								class="fa fa-user fa-fw"></i> User Profile</a></li>
+						<li class="divider"></li>
 						<li><a th:href="@{/user/changePassword}"><i
 								class="fa fa-gear fa-fw"></i> Settings</a></li>
 						<li class="divider"></li>
-						<li><a th:href="@{/logout}"><i
+						<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/logout}"><i
+								class="fa fa-sign-out fa-fw"></i> Logout</a></li>
+						<li sec:authorize="hasAuthority('MANAGER')"><a th:href="@{/managerLogout}"><i
 								class="fa fa-sign-out fa-fw"></i> Logout</a></li>
 					</ul> <!-- /.dropdown-user --></li>
 				<!-- /.dropdown -->
