--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -154,6 +154,7 @@
 								<div class="form-group">
 									<input type="text" name="dateOfBirth"
 										class="form-control input-lg" id="datepicker"
+										pattern="^\d{4}\-(0?[1-9]|1[012])\-(0?[1-9]|[12][0-9]|3[01])$"
 										onsubmit="checkDate();"
 										placeholder="Date Of Birth(yyyy/mm/dd)" tabindex="9"
 										required="required" />
