Added remember me feature.

--- a/src/main/resources/templates/signIn.html
+++ b/src/main/resources/templates/signIn.html
@@ -84,7 +84,7 @@
 
 						<div>
 							<span class="button-checkbox pull-left"> <input
-								type="checkbox" tabindex="3" name="remember_me" id="remember_me" />
+								type="checkbox" tabindex="3" name="remember-me" id="remember-me" />
 								Remember Me
 							</span> <span><a href="forgotPassword" tabindex="4"
 								class="btn btn-link pull-right" style="font-size: 1.1em">Forgot
