Added Rate Group Details View.

--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -60,6 +60,7 @@
 							<ul class="nav nav-second-level ">
 							<li><a th:href="@{/admin/addNewRateGroup}">Add New Rate Group</a></li>
 							<li><a th:href="@{/admin/addNewRateGroup}">Update Plan</a></li>
+							<li><a th:href="@{/admin/rateGroupDetails}">Rate Group Details</a></li>
 							</ul></li>
 					<li sec:authorize="hasAuthority('ADMIN')"><a
 						th:href="@{/admin/requests}"><i class="fa fa-qrcode "></i>
