--- a/src/main/resources/templates/rateGroupDetails.html
+++ b/src/main/resources/templates/rateGroupDetails.html
@@ -58,8 +58,8 @@
 											<td class="text-center" th:text="${rateGroup.discount}"></td>
 											<td class="text-center" th:text="${rateGroup.effectiveFrom}"></td>
 											<td class="text-center" th:text="${rateGroup.groupType}"></td>
-<!-- 											<td class="text-center" th:if="${rateGroup.isActive}">✔</td> -->
-<!-- 											<td class="text-center" th:unless="${rateGroup.isActive}">✘</td> -->
+											<td class="text-center" th:if="${rateGroup.isActive}">✔</td>
+											<td class="text-center" th:unless="${rateGroup.isActive}">✘</td>
 										</tr>
 									</tbody>
 								</table>
