--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -59,7 +59,7 @@
 							Pricing and plans<span class="fa arrow"></span></a>
 							<ul class="nav nav-second-level ">
 							<li><a th:href="@{/admin/addNewRateGroup}">Add New Rate Group</a></li>
-							<li><a th:href="@{/admin/addNewRateGroup}">Update Plan</a></li>
+							<li><a th:href="@{/admin/selectRateGroup}">Update Plan</a></li>
 							<li><a th:href="@{/admin/rateGroupDetails}">Rate Group Details</a></li>
 							</ul></li>
 					<li sec:authorize="hasAuthority('ADMIN')"><a
