--- a/src/main/resources/templates/rateGroupDetails.html
+++ b/src/main/resources/templates/rateGroupDetails.html
@@ -24,28 +24,32 @@
 	<div th:include="adminNav :: head-and-side"></div>
 	<div id="page-wrapper">
 		<div id="page-inner">
-
 			<div class="row">
 				<div class="col-md-12">
-					<h1 class="page-header">Rate Groups</h1>
+					<h1 class="page-header">
+						Rate Groups 
+					</h1>
 				</div>
 			</div>
-			<!-- /. ROW  -->
-
+			<div class="row" style="margin-bottom: 10px">
+				<h2 class="text-danger" th:text="${errorMessage}"></h2>
+			</div>
 			<div class="row">
-				<div class="col-sm-1"></div>
-				<div class="col-md-10">
+				<div class="col-md-12 col-sm-12 col-xs-12">
+					<!-- Advanced Tables -->
 					<div class="panel panel-info">
 						<div class="panel-heading">Rate Group Details</div>
 						<div class="panel-body">
 							<div class="table-responsive">
-								<table class="table table-hover table-striped">
+								<table class="table table-striped table-bordered table-hover"
+									id="dataTables-example">
 									<thead>
 										<tr>
 											<th>Id</th>
 											<th>Base Rate</th>
 											<th>Discount(%)</th>
 											<th>Effective From</th>
+											<th>Effective Upto</th>
 											<th>Group Type</th>
 											<th>Is Active?</th>
 										</tr>
@@ -57,6 +61,7 @@
 												th:text="${rateGroup.baseRateBean.baseRate}"></td>
 											<td class="text-center" th:text="${rateGroup.discount}"></td>
 											<td class="text-center" th:text="${rateGroup.effectiveFrom}"></td>
+											<td class="text-center" th:text="${rateGroup.effectiveUpto}"></td>
 											<td class="text-center" th:text="${rateGroup.groupType}"></td>
 											<td class="text-center" th:if="${rateGroup.isActive}">✔</td>
 											<td class="text-center" th:unless="${rateGroup.isActive}">✘</td>
@@ -64,12 +69,14 @@
 									</tbody>
 								</table>
 							</div>
+
 						</div>
 					</div>
+					<!--End Advanced Tables -->
 				</div>
-				<div class="col-sm-1"></div>
-			</div>
 
+			</div>
+			<!-- /. ROW  -->
 		</div>
 	</div>
 	<div th:include="adminNav :: page-footer"></div>
@@ -80,6 +87,18 @@
 	<script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
 	<!-- Metis Menu Js -->
 	<script th:src="@{/js/jquery.metisMenu.js}" type="text/javascript"></script>
+	<!-- Morris Chart Js -->
+	<script th:src="@{/js/morris/raphael-2.1.0.min.js}"
+		type="text/javascript"></script>
+	<script th:src="@{/js/morris/morris.js}" type="text/javascript"></script>
+	<!-- DATA TABLE SCRIPTS -->
+	<script th:src="@{/js/jquery.dataTables.js}" type="text/javascript"></script>
+	<script th:src="@{/js/dataTables.bootstrap.js}" type="text/javascript"></script>
+	<script>
+		$(document).ready(function() {
+			$("#dataTables-example").dataTable();
+		});
+	</script>
 	<!-- Custom Js -->
 	<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
 </body>
