Added Exception Handling for various issues and added custom error page for exception

--- a/src/main/resources/templates/errorPage.html
+++ b/src/main/resources/templates/errorPage.html
@@ -48,10 +48,10 @@
 				<hr class="colorgraph"></hr>
 				<div class="form-group">
 					<h3>
-						<span th:text="*{cause}">Sebastian</span> Cause
+						<span th:text="*{cause}">Sebastian</span>
 					</h3>
 					<h3>
-						<span th:text="*{message}">Sebastian</span> Error Message
+						<span th:text="*{message}">Sebastian</span>
 					</h3>
 				</div>
 				<hr class="colorgraph" />
@@ -59,7 +59,7 @@
 		</div>
 	</div>
 	<div class="hidden">
-		<span th:text="*{printStackTrace}">Hidden text</span> hidden text
+		<span th:text="*{printStackTrace}">Hidden text</span> 
 	</div>
 	<!-- javascript  -->
 	<script src="/js/jquery.js" th:src="@{/js/jquery.js}"></script>
