Added feature to manage rate group from manger view and fixed issues related to rate group updation.

--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -107,6 +107,9 @@
 						th:href="@{/manager/addWalletBalance}"><i
 							class="fa fa-fw fa-file "></i> Add Wallet balance</a></li>
 					<li sec:authorize="hasAuthority('MANAGER')"><a
+						th:href="@{/manager/manageRateGroup}"><i
+							class="fa fa-gear fa-fw"></i> Manage Rate Group</a></li>
+					<li sec:authorize="hasAuthority('MANAGER')"><a
 						th:href="@{/manager/bookingInUse}"><i
 							class="fa fa-history fa-fw"></i> Running bookings</a></li>
 					<li sec:authorize="hasAuthority('ADMIN')"><a
