--- a/src/main/resources/templates/errorPage.html
+++ b/src/main/resources/templates/errorPage.html
@@ -44,7 +44,7 @@
 		<div class="row">
 			<div
 				class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-				<h2>Why am I here ?</h2>
+				<h2 id="errorId">Why am I here ?</h2>
 				<hr class="colorgraph"></hr>
 				<div class="form-group">
 					<h3>
