--- a/src/main/resources/templates/updateRateGroup.html
+++ b/src/main/resources/templates/updateRateGroup.html
@@ -68,6 +68,7 @@
 												Percentage(%))</label>
 											<div class="controls">
 												<input type="number" class="form-control" name="discount"
+												th:value="${rateGroup.discount}"
 													min="0" max="100" title="Enter only 0 to 100"
 													required="required" tabindex="3" />
 											</div>
@@ -76,6 +77,7 @@
 											<label class="control-label">Effective From</label> <input
 												type="text" name="effectiveFrom" class="form-control"
 												maxlength="10" title="Enter valid date"
+												th:value="${rateGroup.effectiveFrom}"
 												pattern="^\d{4}\-(0?[1-9]|1[012])\-(0?[1-9]|[12][0-9]|3[01])$"
 												id="datepicker" onchange="checkEffectiveFrom();"
 												placeholder="yyyy/mm/dd" tabindex="4" required="required" />
